--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       border: 1px solid rgba(148, 163, 184, 0.2);
       border-radius: 12px; padding: 16px;
       z-index: 4000;
-      color: #e7ffe9; z-index: 100;
+      color: #e7ffe9;
       max-width: 350px; opacity: 0;
       transform: translateX(100%);
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -624,6 +624,12 @@
       background: rgba(16, 185, 129, 0.3) !important;
       border-color: #10b981 !important;
     }
+
+.notification {
+    top: 310px; /* ajuste a altura que quiser */
+    right: 10px; /* opcional: encostar mais na borda */
+    max-width: 90%; /* opcional: mais largo no celular */
+  }
 
 #mobileControls {
   position: fixed;
