--- a/index.html
+++ b/index.html
@@ -491,7 +491,13 @@
     display: none !important;
   }
 
-   
+  .notification {
+    top: 310px !important; /* ou o valor que preferir */
+    right: 10px;
+    max-width: 90%;
+  }
+
+ 
    #smartDashboard {
     position: fixed;
     top: 0;
@@ -625,11 +631,7 @@
       border-color: #10b981 !important;
     }
 
-.notification {
-    top: 310px; /* ajuste a altura que quiser */
-    right: 10px; /* opcional: encostar mais na borda */
-    max-width: 90%; /* opcional: mais largo no celular */
-  }
+
 
 #mobileControls {
   position: fixed;
