--- a/index.html
+++ b/index.html
@@ -1008,14 +1008,14 @@
 
 // ===== CONFIGURAÇÃO E INICIALIZAÇÃO =====
 const firebaseConfig = {
-  apiKey: "AIzaSyAE8AgqS_rpQygvmO6ugTX5yQSjQDwJ0vk",
-  authDomain: "smamus3d.firebaseapp.com",
-  databaseURL: "https://smamus3d-default-rtdb.firebaseio.com",
-  projectId: "smamus3d",
-  storageBucket: "smamus3d.firebasestorage.app",
-  messagingSenderId: "951385126549",
-  appId: "1:951385126549:web:c80ed059acdf45bdcc8d9c",
-  measurementId: "G-H52V7SLBGE"
+  apiKey: "AIzaSyCAgK6BsfiqOavEs3Q17khBLZFJn4OHCJU",
+  authDomain: "smamus3dv2.firebaseapp.com",
+  databaseURL: "https://smamus3dv2-default-rtdb.firebaseio.com",
+  projectId: "smamus3dv2",
+  storageBucket: "smamus3dv2.firebasestorage.app",
+  messagingSenderId: "1012835641735",
+  appId: "1:1012835641735:web:ef874f13c462c8c4a08b22",
+  measurementId: "G-FJDSW5HC68"
 };
 
 firebase.initializeApp(firebaseConfig);
